# waterscrape

./: main.py  pyproject.toml  scraper.py  sheets_handler.py  utils.py
